--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,31 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyJob</title>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<table class="table table-hover">
-    <tr>
-        <th>id</th>
-        <th>别名</th>
-        <th>用户名</th>
-        <th>SVN</th>
-        <th>编辑</th>
-    </tr>
-    <tr  th:each="info: ${Infos}" >
-        <td th:text="${info.id}"></td>
-        <td th:text="${info.alias}"></td>
-        <td th:text="${info.vn}"></td>
-        <td th:text="${info.password}"></td>
-        <td >
-            <button class="btn btn-warning"> <span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
-            <button class="btn btn-danger"> <span class="glyphicon  glyphicon-trash" aria-hidden="true"></span></button></td>
-    </tr>
-
-</table>
+<div th:insert="/fragments/table.html::tab" id="table-container"></div>
+<button id="getSth" th:onclick="'loadSearchResult();'">Click me with ajax call</button>
 <script>
+    function loadSearchResult(){
+        $.ajax({
+                type:'GET',
+                url:'/updatePart',
+                success:function(data){
+                    /*<![CDATA[*/
+       				  $('#table-container').html(data);
+        			  /*]]>*/
+                }
+            });
+    }
+
+
+    $(document).ready(function(){
+        $("#getSth").click(function(){
+            $.ajax({
+                type:'GET',
+                url:'/updatePart',
+                success:function(data){
+                    /*<![CDATA[*/
+       				  $('#table-container').html(data);
+        			  /*]]>*/
+                }
+            });
+        });
+
+        fetch("/queryNew")
+        .then(res=>res.json())
+        .then(d=>{
+            console.log(d);
+        })
+    });
+
+
 
 </script>
 </body>
