--- a/src/main/resources/templates/fragments/table.html
+++ b/src/main/resources/templates/fragments/table.html
@@ -12,8 +12,8 @@
         <td th:text="${info.vn}"></td>
         <td th:text="${info.password}"></td>
         <td >
-            <a class="btn btn-warning" th:href="@{'/edit?id='+${info.id}}"> <span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-            <button class="btn btn-danger"> <span class="glyphicon  glyphicon-trash" aria-hidden="true"></span></button></td>
+            <button class="btn btn-warning" th:onclick="'edit('+${info.id}+')'"> <span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
+            <button class="btn btn-danger" th:onclick="'del('+${info.id}+')'"> <span class="glyphicon  glyphicon-trash" aria-hidden="true"></span></button></td>
     </tr>
 
 </table>
